reworked tenantcontroller to only accept tenantId from header
